# california-state-portal-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  california-state-portal.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  california-state-portal.rockspec  california-state-portal_sdk.lua  california-state-portal_types.lua  config.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  (+4 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  californiastateportal_sdk.py  californiastateportal_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  control.py  error.py  result.py
py/entity/: service_entity.py
py/feature/: base_feature.py  cache_feature.py  clienttrack_feature.py  debug_feature.py  idempotency_feature.py  log_feature.py  netsim_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_service_direct.py  test_service_entity.py
py/utility/: clean.py  done.py  feature_add.py  feature_hook.py  make_context.py  make_error.py  make_options.py  make_point.py  make_request.py  make_result.py  param.py  prepare_auth.py  prepare_body.py  prepare_path.py  result_body.py  transform_response.py
(+418 files in other folders)
